<resources>
    <string name="app_name">Github Users Search</string>
    <string name="search_hint">Enter username</string>
    <string name="tab_follower">Followers</string>
    <string name="tab_following">Following</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="mark">|</string>
    <string name="logo_github">Github logo</string>
    <string name="detail_user">Detail User</string>
</resources>